--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-		<a href="#" class="navbar-brand"><img src="/img/logo.png" alt="logo"></a>
+		<a href="#" class="navbar-brand"><img src="https://raw.githubusercontent.com/EvonuX/Agency/master/img/logo.png" alt="logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
@@ -140,7 +140,7 @@
 				<div class="col-md-6 clients">
 					<div class="row">
 						<div class="col-md-4">
-							<img src="/img/client1.png" alt="client one">
+							<img src="https://raw.githubusercontent.com/EvonuX/Agency/master/img/client1.png" alt="client one">
 						</div>
 						<div class="col-md-8">
 							<blockquote class="text-left"><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur,
@@ -157,7 +157,7 @@
 				<div class="col-md-6 clients">
 					<div class="row">
 						<div class="col-md-4">
-							<img src="/img/client2.png" alt="client two">
+							<img src="https://raw.githubusercontent.com/EvonuX/Agency/master/img/client2.png" alt="client two">
 						</div>
 						<div class="col-md-8">
 							<blockquote class="text-left"><i class="fas fa-quote-left"></i>Lorem ipsum dolor, sit amet consectetur
@@ -183,7 +183,7 @@
 		<footer>
 			<div class="row justify-content-center">
 				<div class="col-md-5 text-center">
-					<img src="img/logo.png" alt="logo">
+					<img src="https://raw.githubusercontent.com/EvonuX/Agency/master/img/logo.png" alt="logo">
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, dolorem!</p>
 					<strong>Contact Info</strong>
 					<p>(888) 888-8888 <br> email@address.com</p>
